Altera e adiciona novas funções na classe AtivoData para implementação no Menu